--- a/index.html
+++ b/index.html
@@ -154,14 +154,29 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#menu">Menu</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#contact">Contact Us</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="logo">
+        <img src="images/logo.png" alt="Italian Restaurant Logo">
+    </div>
+    <nav>
+        <ul>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#contact">Contact Us</a></li>
+        </ul>
+    </nav>
+    <div class="search-bar">
+        <input type="text" id="search-input" placeholder="Search for items...">
+        <button type="submit" id="search-button">
+            <i class="fa fa-search"></i>
+        </button>
+    </div>
+    <div class="cart-icon">
+        <a href="#cart">
+            <i class="fa fa-shopping-cart"></i>
+            <span id="cart-count">0</span>
+        </a>
+    </div>
+</header>
 
     <main>
         <section id="menu">
@@ -302,9 +317,65 @@ for (var i = 0; i < addToCartButtons.length; i++) {
     });
 }
 
+        document.getElementById('cart-icon').addEventListener('click', function(event) {
+    event.preventDefault();
+
+    // Display the cart page
+    // For example, you can open a new window or tab that contains the cart page
+
+    // Update the cart count display
+    var cartCountDisplay = document.getElementById('cart-count');
+    var cartItems = JSON.parse(localStorage.getItem('cartItems')) || [];
+    var cartCount = cartItems.reduce(function(count, item) {
+        return count + item.quantity;
+    }, 0);
+    cartCountDisplay.textContent = cartCount;
+});
 // Add an event listener to the form
 var orderForm = document.getElementById('order-form');
 orderForm.addEventListener('submit', handleFormSubmit);
+        document.getElementById('search-button').addEventListener('click', function(event) {
+    event.preventDefault();
+
+    var searchInput = document.getElementById('search-input');
+    var searchValue = searchInput.value.toLowerCase();
+
+    // Use the searchValue to filter the items in the menu
+    // For example, you can loop through the menu items and check if they contain the searchValue
+
+    // Clear the search input field
+    searchInput.value = '';
+});
+        function searchItems(searchValue) {
+    // Get the menu items from the DOM
+    var menuItems = document.querySelectorAll('.menu-item');
+
+    // Clear the search results
+    var searchResults = document.getElementById('search-results');
+    searchResults.innerHTML = '';
+
+    // Loop through the menu items and check if they contain the searchValue
+    for (var i = 0; i < menuItems.length; i++) {
+        var itemName = menuItems[i].querySelector('h3').textContent;
+        if (itemName.toLowerCase().includes(searchValue.toLowerCase())) {
+            // Create a new div element to display the search result
+            var searchResult = document.createElement('div');
+            searchResult.classList.add('search-result');
+
+            // Add the item name and price to the search result
+            var itemNameElement = document.createElement('h3');
+            itemNameElement.textContent = itemName;
+            searchResult.appendChild(itemNameElement);
+
+            var itemPriceElement = document.createElement('p');
+            itemPriceElement.textContent = '$' + menuItems[i].querySelector('p').textContent;
+            searchResult.appendChild(itemPriceElement);
+
+            // Add the search result to the search results container
+            searchResults.appendChild(searchResult);
+        }
+    }
+}
     </script>
 </body>
 </html>
